classDiagram
  class ArrayIdManager {
    -arreglo: array
    +getArreglo(): array
    +agregar(elemento: Elemento): void
    +existeId(id: int): bool
    +eliminarPorId(id: int): void
    +getPorId(id: int): Elemento or null
    +modificar(elementoModificado: Elemento): void
    +mostrar(): void (abstract)
  }

  
  class ParticipanteManager {
    -idCarrera: int
   +__construct(idCarrera: int): void
  }

    class Participante {
    -id: int
    -idCarrera: int
    -idAtleta: int
    -pago: float
    -posGeneral: int
    -posCategoria: int
    -categoria: string
    +__construct(idCarrera: int, idAtleta: int, pago: float, posGeneral: int, posCategoria: int, categoria: string): void
    +getId(): int
    +mostrar(): void
    +save(): void
    +delete(): void
    +update(): void
  }

    class CarreraManager {
        +__construct()
        +mostrarResultadoCarrera()
        +modificarParticipante()
        +inscribirParticipante()
        -modificaKits(id_carrera)
    }

    class Carrera {
        -id
        -nombre
        -circuito
        -fecha
        -precio
        -kits
        -participantes
        +__construct(nombre, circuito, fecha, precio, kits)
        +mostrar()
        +save()
        +delete()
        +update()
        +getParticipantes()
        +mostrarResultado()
        +modificarParticipante()
    }
 class AtletaManager {
        +__construct()
 }

    class Atleta {
        -id
        -nombre
        -email
        -fechaNacimiento
        +__construct(nombre, email, fechaNacimiento)
        +save()
        +delete()
        +update()
    }

    interface ABMinterface {
        +levantar()
        +alta()
        +baja()
        +modificacion()
    }

 
    
  ArrayIdManager <|-- CarreraManager
  ArrayIdManager <|-- AtletaManager
  ArrayIdManager <|-- ParticipanteManager
  Carrera --|> ParticipanteManager
  CarreraManager --|> Carrera
  CarreraManager --|> ABMinterface
  ParticipanteManager --|> Participante
  ParticipanteManager --|> ABMinterface
  AtletaManager --|> Atleta
  AtletaManager --|> ABMinterface
